# stockie_ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.claude/: context.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260522_e1663686b91a_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  db.py  logging.py
backend/app/models/: __init__.py  base.py
backend/tests/: __init__.py  conftest.py  test_health.py
docs/: CONTRIBUTING_WORKFLOW.md  PLANNING_features.md  PLANNING_tasks.md
frontend/: .env.example  .eslintignore  .prettierignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: health-status.tsx
frontend/components/ui/: button.tsx
frontend/lib/: utils.ts
frontend/lib/api/: client.ts  index.ts  schema.d.ts
frontend/types/: css.d.ts
infra/: .env.example  docker-compose.yml
infra/postgres/init/: 01_extensions.sql
