[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockie-ai-backend"
version = "0.1.0"
description = "Stockie AI backend – FastAPI service for market analysis and recommendations."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
