[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockie-ai-backend"
version = "0.1.0"
description = "Stockie AI backend – FastAPI service for market analysis and recommendations."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pre-commit>=4.0",
    "ruff>=0.11",
    "black>=25.1",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
# Alembic env.py is generated boilerplate; exclude it.
exclude = ["alembic/"]
